--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <title>A Basic HTML5 Template</title>
-  <meta name="description" content="A simple HTML5 Template for SSE testing">
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Page Title</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
 </head>
-
 <body>
-<script>
-    const eventSource = new EventSource('http://localhost:8088/progress')
+  <div>
+    <ul id="messages">
+      
+    </ul>
+  </div>
+    <script>
 
-    eventSource.addEventListener('ssEvent', (event) => {
-        const data = JSON.parse(event.data)
-        console.log(data)
-    })
+const source = new EventSource("http://localhost:9000/sse")
+      const ul = document.getElementById("messages");
+      source.onmessage = (event) => {
+        var li = document.createElement("li");
 
-    eventSource.close()
-</script>
+        li.appendChild(document.createTextNode(`${event.data}`));
+        li.setAttribute("id", "element4"); // added line
+        ul.appendChild(li);
+        console.log("OnMessage Called:")
+        console.log(event)
+        console.log(JSON.parse(event.data))
+      }
+    </script>
 </body>
 </html>
